--- a/Subjects/chemistry.html
+++ b/Subjects/chemistry.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="columns">
             <div class="card simple-box">
-                <h3>Title</h3>
-                <a href="../Files/" class="btn" download>Download</a>
+                <h3>MS Chauhan Orgainc Chemistry</h3>
+                <a href="../Files/Organic-Chemistry-MS-Chauhan.pdf" class="btn" download>Download</a>
             </div>
         </div>
     </div>
