--- a/Subjects/physics.html
+++ b/Subjects/physics.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="columns">
             <div class="card simple-box">
-                <h3>Title</h3>
-                <a href="../Files/" class="btn" download>Download</a>
+                <h3>DC Pandey ALL in one set</h3>
+                <a href="../Files/DC-Pandey-physic-set.zip" class="btn" download>Download</a>
             </div>
         </div>
     </div>
