--- a/Subjects/chemistry.html
+++ b/Subjects/chemistry.html
@@ -12,10 +12,110 @@
         <h1>Maths</h1>
     </header>
     <div class="container">
-        <div class="columns">
+        <div class="columns-grid">
             <div class="card simple-box">
                 <h3>MS Chauhan Orgainc Chemistry</h3>
                 <a href="../Files/Organic-Chemistry-MS-Chauhan.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Some Basic Concepts of Chemistry</h3>
+                <a href="../Files/Chemistry/1_Some Basic Concepts of Chemistry.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>States of Matter</h3>
+                <a href="../Files/Chemistry/5. States of Matter.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Equilibrium</h3>
+                <a href="../Files/Chemistry/7-Equilibrium.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Redox Reaction</h3>
+                <a href="../Files/Chemistry/8. Redox Reaction.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Environmental Chemistry</h3>
+                <a href="../Files/Chemistry/11 Environmental Chemistry.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>P-Block Elements</h3>
+                <a href="../Files/Chemistry/11_The P-Block Elements.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Aldehyes , Ketones and Carboxylic Acid</h3>
+                <a href="../Files/Chemistry/12. Aldehyde Ketones and Carboxylic Acid.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Polymers</h3>
+                <a href="../Files/Chemistry/15_Polymers.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Hydrocarbons</h3>
+                <a href="../Files/Chemistry/A13 hydrocarbons new.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Biomolecules</h3>
+                <a href="../Files/Chemistry/Biomolecules.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Solid State</h3>
+                <a href="../Files/Chemistry/C1 Solid State.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Structure of Atom</h3>
+                <a href="../Files/Chemistry/C2 Structure of Atom.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Chemical Kinetics</h3>
+                <a href="../Files/Chemistry/C4 Chemical Kinetics.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Thermodynamics</h3>
+                <a href="../Files/Chemistry/C6 Thermodynamics.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3> P-Block Elements Part 2</h3>
+                <a href="../Files/Chemistry/C7 P- Block Elements.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Coordination Compounds</h3>
+                <a href="../Files/Chemistry/C9 Coordination Compounds.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Hydrogen</h3>
+                <a href="../Files/Chemistry/C9 Hydrogen.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Haloakanes & Haloarenes</h3>
+                <a href="../Files/Chemistry/C10 Haloakanes & Haloarenes.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Alcohol , phenol & Ether</h3>
+                <a href="../Files/Chemistry/C11 Alcohol, Phenol & Ethers.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Amines</h3>
+                <a href="../Files/Chemistry/C13 AMINES.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Chemistry in everyday life</h3>
+                <a href="../Files/Chemistry/C16 Chemistry in everyday Life.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Chemical Bonding</h3>
+                <a href="../Files/Chemistry/Chemical bonding and molecular structure.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>D & F Block</h3>
+                <a href="../Files/Chemistry/" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>ElectroChemistry</h3>
+                <a href="../Files/Chemistry/Electrochemistry.pdf" class="btn" download>Download</a>
+            </div>
+            <div class="card simple-box">
+                <h3>Surface Chemistry</h3>
+                <a href="../Files/Chemistry/Surface chemistry.pdf" class="btn" download>Download</a>
             </div>
         </div>
     </div>
