--- a/Subjects/physics.html
+++ b/Subjects/physics.html
@@ -12,7 +12,7 @@
         <h1>Maths</h1>
     </header>
     <div class="container">
-        <div class="columns">
+        <div class="columns-grid">
             <div class="card simple-box">
                 <h3>DC Pandey ALL in one set</h3>
                 <a href="../Files/DC-Pandey-physic-set.zip" class="btn" download>Download</a>
