--- a/Subjects/maths.html
+++ b/Subjects/maths.html
@@ -12,14 +12,10 @@
         <h1>Maths</h1>
     </header>
     <div class="container">
-        <div class="columns">
+        <div class="columns-grid">
             <div class="card simple-box">
-                <h3>Black Book Set 01 (CH- 1 to 9)</h3>
-                <a href="../Files/Maths-Black-book-ch-1-09.pdf" class="btn" download>Download</a>
-            </div>
-            <div class="card simple-box">
-                <h3>Black Book Set 02 (CH- 10 to 26)</h3>
-                <a href="../Files/Maths-Black-book-ch-10-26.pdf" class="btn" download>Download</a>
+                <h3>Black Book Set 01 & 02</h3>
+                <a href="../Files/Maths-BlackBook.zip" class="btn" download>Download</a>
             </div>
         </div>
     </div>
